# MPCC_F1tenth

./: .gitignore  README.md
f1tenth_mpc/: CMakeLists.txt  package.xml
f1tenth_mpc/launch/: amcl.launch  simulator_amcl.launch  simulator_amcl.rviz
f1tenth_mpc/maps/: berlin.yaml
f1tenth_mpc/scripts/: Controller.py  Observer.py  publish.py
f1tenth_mpc/scripts/Helper_scripts/: RCDriver.py  generate_vizMarkerMsg.py  get_boundary.py  interpolate_path.py  plot_trajectories.py  referenceParser.py  trackParser.py
f1tenth_mpc/scripts/MPCC_Code_Directory/: acados_sim_solver_Dynamic_Pacejka_model.c  acados_sim_solver_Dynamic_Pacejka_model.h  acados_sim_solver_kinematic_model.c  acados_solver.pxd  acados_solver_kinematic_model.c  acados_solver_kinematic_model.h  main_kinematic_model.c  main_sim_Dynamic_Pacejka_model.c  main_sim_kinematic_model.c
f1tenth_mpc/scripts/MPCC_Code_Directory/Dynamic_Pacejka_model_constraints/: Dynamic_Pacejka_model_constr_h_0_fun.c  Dynamic_Pacejka_model_constr_h_0_fun_jac_uxt_zt_hess.c  Dynamic_Pacejka_model_constr_h_e_fun_jac_uxt_zt.c  Dynamic_Pacejka_model_constraints.h
f1tenth_mpc/scripts/MPCC_Code_Directory/Dynamic_Pacejka_model_cost/: Dynamic_Pacejka_model_cost_ext_cost_0_fun_jac.c  Dynamic_Pacejka_model_cost_ext_cost_e_fun_jac_hess.c  Dynamic_Pacejka_model_cost_ext_cost_fun_jac.c  Dynamic_Pacejka_model_cost_ext_cost_fun_jac_hess.c
f1tenth_mpc/scripts/MPCC_Code_Directory/Dynamic_Pacejka_model_model/: Dynamic_Pacejka_model_impl_dae_fun_jac_x_xdot_u_z.c  Dynamic_Pacejka_model_model.h
f1tenth_mpc/scripts/MPCC_Code_Directory/kinematic_model_constraints/: kinematic_model_constr_h_0_fun_jac_uxt_zt.c  kinematic_model_constr_h_e_fun.c
f1tenth_mpc/scripts/MPCC_Code_Directory/kinematic_model_cost/: kinematic_model_cost.h  kinematic_model_cost_ext_cost_0_fun_jac.c  kinematic_model_cost_ext_cost_e_fun_jac_hess.c  (+2 more)
(+84 files in other folders)
